2009-09-11  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): add an early cl_cv_have_clisp=no

2009-09-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): revert the 2009-07-06 patch, use podval again

2009-09-10  Sam Steingold  <sds@gnu.org>

	New user variable CUSTOM:*USER-LIB-DIRECTORY* is respected by
	REQUIRE and used by "clisp-link install".
	* clisp-link.in (link): remove the obsolete command
	(install): add command
	(set_dynamic_module_location, current_linking_set): add
	(prepare_dynamic_module): call set_dynamic_module_location
	* constsym.d (user_lib_directory): add
	* defs1.lisp (*user-lib-directory*): defvar
	(require): treat it the same as *lib-directory*
	* spvw.d (init_symbol_values): define_variable user_lib_directory
	(main_actions): init user_lib_directory
	* makemake.in: install clisp-link in bindir;
	generate and install its manpage

2009-09-10  Sam Steingold  <sds@gnu.org>

	* modules/queens/Makefile (callqueens.m.c): fix modprep invocation
	* modules/queens/queens.c (queens): add a prototype to pacify gcc

2009-09-10  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/link.sh.in, modules/bindings/glibc/link.sh:
	* modules/bindings/win32/link.sh, modules/clx/mit-clx/link.sh:
	* modules/clx/new-clx/link.sh.in, modules/dbus/link.sh.in:
	* modules/dirkey/link.sh.in, modules/fastcgi/link.sh.in:
	* modules/gdbm/link.sh.in, modules/gtk2/link.sh.in:
	* modules/i18n/link.sh.in, modules/libsvm/link.sh:
	* modules/matlab/link.sh, modules/netica/link.sh:
	* modules/oracle/link.sh.in, modules/pari/link.sh.in:
	* modules/pcre/link.sh.in, modules/postgresql/link.sh.in:
	* modules/queens/link.sh, modules/rawsock/link.sh.in:
	* modules/readline/link.sh.in, modules/regexp/link.sh.in:
	* modules/syscalls/link.sh.in, modules/wildcard/link.sh.in:
	* modules/zlib/link.sh.in: pass CLISP="${CLISP}" to make

2009-09-08  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/Makefile (win32.o): do not depend on